
syntax = "proto3";

option java_package = "ir.ms.pb";
option java_outer_classname = "PB";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import public "pb_table.proto";

message PB_CommandToServer {
	int64 ClientCallId = 1;
	string Command = 2;
	bytes Data = 3;
}

message PB_CommandToClient {
	int64 ServerCallId = 1;
	string Command = 2;
	bytes Data = 3;
}


message PB_CommandReceivedToServer {
	int64 ClientCallId = 1;
}

message PB_CommandReceivedToClient {
	int64 ServerCallId = 1;
}

message PB_ResToClient {
    int64 ClientCallId = 1;
    string PBClass = 2;
    bytes Data = 3;
}
