syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enums.proto";
import "pb_chat.proto";
import "pb_views.proto";

// AddNewTextMessage
message PB_MsgParam_AddNewTextMessage {
    string Text = 1;
    int32 PeerId = 5;
    int32 Time = 6;
    int64 ReplyToMessageId = 10;
    PB_MessageForwardedFrom Forward = 14;
}

message PB_MsgResponse_AddNewTextMessage {

}

// AddNewMessage
message PB_MsgParam_AddNewMessage {
    string Text = 1;
    int32 PeerId = 5;
    int32 Time = 6;
    int64 ReplyToMessageId = 10;
    PB_MessageForwardedFrom Forward = 14;
    RoomMessageTypeEnum RoomMessageType = 15;
    bytes Blob = 17;

    PB_MessageView MessageView = 19;
}

message PB_MsgResponse_AddNewMessage {

}

// SetRoomActionDoing
message PB_MsgParam_SetRoomActionDoing {
    int64 GroupId = 12;
    string DirectRoomKey = 102;
    RoomActionDoingEnum ActionType = 1020;
}
message PB_MsgResponse_SetRoomActionDoing{
}

// GetMessagesByIds
message PB_MsgParam_GetMessagesByIds {
//    repeated int64 MessageId = 1;
    PB_MessagesCollections MessagesCollections = 1;
}
message PB_MsgResponse_GetMessagesByIds {
    repeated PB_MessageView MessagesViews = 1 ;
}

// GetMessagesHistory
message PB_MsgParam_GetMessagesHistory {
    int64 ChatId = 1;
    sint32 FromSeq = 2;
    sint32 EndSeq = 3;
}
message PB_MsgResponse_GetMessagesHistory {
    repeated PB_MessageView MessagesViews = 1 ;
}

/////////
message PB_MsgParam_SetChatMessagesRangeAsSeen {
    int64 ChatId = 1 ;
    sint32 FromSeq = 2;//must persent 
    sint32 EndSeq = 3;// must persent
    int64 SeenTimeMs = 4;
}
message PB_MsgResponse_SetChatMessagesRangeAsSeen {

}


/////////////////////////////////////
message PB_MsgParam_DeleteChatHistory {//d+g
    int64 ChatId = 1 ;
    sint32 ToSeq = 2;//must persent
}
message PB_MsgResponse_DeleteChatHistory {

}

/////////////////////////////////////
message PB_MsgParam_DeleteMessagesByIds {
    PB_MessagesCollections MessagesCollections = 1;
//    /*repeated int64 DirectMessagesIds = 10;
//    repeated int64 GroupMessagesIds = 20;*/
}
message PB_MsgResponse_DeleteMessagesByIds {

}

/////////////////////////////////////
message PB_MsgParam_SetMessagesAsReceived {
    PB_MessagesCollections MessagesCollections = 1;
//    /*int64 ChatId = 1;
//    RoomTypeEnum RoomType = 2;
//    repeated int64 MessageId = 3;
//    repeated int64 DirectMessagesIds = 10;
//    repeated int64 GroupMessagesIds = 20;*/
}
message PB_MsgResponse_SetMessagesAsReceived {

}

/////////////////////////////////////
message PB_MsgParam_ForwardMessages {
//    /*repeated int64 DirectMessagesIds = 1;
//    repeated int64 GroupMessagesIds = 2;*/
    PB_MessagesCollections MessagesCollections = 1;
    repeated int64 ToDirectChatIds = 3;
    repeated int64 ToGroupChatIds = 4;
}
message PB_MsgResponse_ForwardMessages {
}

/////////////////////////////////////
message PB_MsgParam_EditMessage {
    int64 ChatId = 1;
    RoomTypeEnum RoomType = 2;
    int64 MessageId = 3;
    string NewText = 4;
}
message PB_MsgResponse_EditMessage {

}

/////////////////////////////////////
message PB_MsgParam_BroadcastNewMessage {
    string Text = 1;
    int32 PeerId = 5;
    int32 Time = 6;
    PB_MessageForwardedFrom Forward = 14;
}
message PB_MsgResponse_BroadcastNewMessage {

}

////////////////////////////////////////////////////////

message PB_MsgParam_GetFreshChatList {

}
message PB_MsgResponse_GetFreshChatList {

}

////////////////////////////////////////////////////////

message PB_MsgParam_GetFreshRoomMessagesList {

}
message PB_MsgResponse_GetFreshRoomMessagesList {

}

////////////////////////////////////////////////////////

service RPC_Msg {
    rpc AddNewTextMessage (PB_MsgParam_AddNewTextMessage) returns (PB_MsgResponse_AddNewTextMessage);
    rpc AddNewMessage (PB_MsgParam_AddNewMessage) returns (PB_MsgResponse_AddNewMessage);
    rpc SetRoomActionDoing (PB_MsgParam_SetRoomActionDoing) returns (PB_MsgResponse_SetRoomActionDoing);
    rpc GetMessagesByIds (PB_MsgParam_GetMessagesByIds) returns (PB_MsgResponse_GetMessagesByIds);
    rpc GetMessagesHistory (PB_MsgParam_GetMessagesHistory) returns (PB_MsgResponse_GetMessagesHistory);
    rpc SetMessagesRangeAsSeen (PB_MsgParam_SetChatMessagesRangeAsSeen) returns (PB_MsgResponse_SetChatMessagesRangeAsSeen);
    rpc DeleteChatHistory (PB_MsgParam_DeleteChatHistory) returns (PB_MsgResponse_DeleteChatHistory);
    rpc DeleteMessagesByIds (PB_MsgParam_DeleteMessagesByIds) returns (PB_MsgResponse_DeleteMessagesByIds);
    rpc SetMessagesAsReceived (PB_MsgParam_SetMessagesAsReceived) returns (PB_MsgResponse_SetMessagesAsReceived);
    rpc ForwardMessages (PB_MsgParam_ForwardMessages) returns (PB_MsgResponse_ForwardMessages);
    rpc EditMessage (PB_MsgParam_EditMessage) returns (PB_MsgResponse_EditMessage);
    rpc BroadcastNewMessage (PB_MsgParam_BroadcastNewMessage) returns (PB_MsgResponse_BroadcastNewMessage);

    rpc GetFreshChatList (PB_MsgPaaram_GetFreshChatList) returns (PB_MsgResponse_GetFreshChatList);
    rpc GetFreshRoomMessagesList (PB_MsgPaaram_GetFreshRoomMessagesList) returns (PB_MsgResponse_GetFreshRoomMessagesList);

    rpc Echo (PB_MsgParam_Echo) returns (PB_MsgResponse_PB_MsgParam_Echo);
}

////////////////////////////////
////////////////////////////////
message PB_MsgParam_Echo {
    string Text = 1;

}
message PB_MsgResponse_PB_MsgParam_Echo {
    string Text = 1;
}
